--- a/minimangol/Makefile
+++ b/minimangol/Makefile
@@ -1,9 +1,13 @@
 NAME = minishell
 
-# Source files with proper handling
+GREEN = \033[0;32m
+YELLOW = \033[0;33m
+BLUE = \033[0;34m
+RESET = \033[0m
+
 SOURCES = \
-	parsing/tokenize/lexer.c \
-	parsing/tree/tree_wdakxi.c
+	parsing/tokenize/lexer.c parsing/error/error.c \
+	parsing/tree/tree_wdakxi.c parsing/tokenize/main.c \
 
 OBJECTS = $(SOURCES:.c=.o)
 
@@ -12,34 +16,32 @@ CC = gcc
 LIBFT_DIR = ./libft
 LIBFT = $(LIBFT_DIR)/libft.a
 
-# Handle readline dependency
 READLINE_INCLUDE = -I/usr/include/readline
 READLINE_LIB = -lreadline
 
 all: $(NAME)
 
-# Rule to ensure libft is compiled first
 $(LIBFT):
-	@echo "Building libft library..."
+	@echo "$(BLUE)Building libft library...$(RESET)"
 	@$(MAKE) -C $(LIBFT_DIR)
 
-# Main rule to build the executable - link with explicit -L path
 $(NAME): $(LIBFT) $(OBJECTS)
-	@echo "Linking executable..."
-	$(CC)  -o $(NAME) $(OBJECTS) -L$(LIBFT_DIR) -lft $(READLINE_LIB)
+	@echo "$(GREEN)Linking executable...$(RESET)"
+	@$(CC) -o $(NAME) $(OBJECTS) -L$(LIBFT_DIR) -lft $(READLINE_LIB)
+	@echo "$(GREEN)✓ $(NAME) successfully built!$(RESET)"
 
-# Rule to compile individual object files - fix include path
 %.o: %.c minishell.h
-	@echo "Compiling $<..."
-	$(CC)  -I$(LIBFT_DIR) $(READLINE_INCLUDE) -c $< -o $@
+	@printf "$(YELLOW)▶ Compiling... [%s]\r$(RESET)" $
+	@$(CC) -I$(LIBFT_DIR) $(READLINE_INCLUDE) -c $< -o $@
+	@printf "$(GREEN)✓ Compiled   $(RESET)\n"
 
 clean:
-	@echo "Cleaning object files..."
+	@echo "$(BLUE)Cleaning project files...$(RESET)"
 	@rm -f $(OBJECTS)
 	@$(MAKE) -C $(LIBFT_DIR) clean
 
 fclean: clean
-	@echo "Removing executable..."
+	@echo "$(BLUE)Removing executable...$(RESET)"
 	@rm -f $(NAME)
 	@$(MAKE) -C $(LIBFT_DIR) fclean
 
