--- a/minimangol/Makefile
+++ b/minimangol/Makefile
@@ -6,8 +6,10 @@ BLUE = \033[0;34m
 RESET = \033[0m
 
 SOURCES = \
-	parsing/tokenize/lexer.c parsing/error/error.c \
-	parsing/tree/tree_wdakxi.c parsing/tokenize/main.c \
+	parsing/tokenize/lexer.c parsing/error/error.c parsing/tree/pipes_handling.c\
+	parsing/tree/tree_wdakxi.c parsing/tokenize/main.c parsing/tree/prepare_env.c\
+	parsing/tree/export.c parsing/tree/cd.c parsing/tree/unset.c parsing/tree/pwd.c\
+	parsing/tree/echo.c parsing/tree/exit.c
 
 OBJECTS = $(SOURCES:.c=.o)
 
