--- a/minimangol/Makefile
+++ b/minimangol/Makefile
@@ -9,7 +9,8 @@ SOURCES = \
 	parsing/tokenize/lexer.c parsing/error/error.c parsing/tree/pipes_handling.c\
 	parsing/tree/tree_wdakxi.c parsing/tokenize/main.c parsing/tree/prepare_env.c\
 	parsing/tree/export.c parsing/tree/cd.c parsing/tree/unset.c parsing/tree/pwd.c\
-	parsing/tree/echo.c parsing/tree/exit.c parsing/tree/prepare_heredoc.c parsing/tokenize/expand.c
+	parsing/tree/echo.c parsing/tree/exit.c parsing/tree/prepare_heredoc.c parsing/tokenize/expand.c\
+	parsing/tree/joining_args.c
 
 OBJECTS = $(SOURCES:.c=.o)
 
