--- a/minimangol/Makefile
+++ b/minimangol/Makefile
@@ -8,6 +8,7 @@ SOURCES = \
 	parsing/tree/export.c parsing/tree/cd.c parsing/tree/unset.c parsing/tree/pwd.c\
 	parsing/tree/echo.c parsing/tree/exit.c parsing/tree/prepare_heredoc.c parsing/tokenize/expand.c\
 	parsing/tree/joining_args.c parsing/tree/free_all.c parsing/tokenize/syntax_error.c\
+	parsing/tokenize/syntax_error2.c parsing/tokenize/syntax_error3.c
 
 OBJECTS = $(SOURCES:.c=.o)
 
