--- a/minimangol/Makefile
+++ b/minimangol/Makefile
@@ -7,8 +7,9 @@ SOURCES = \
 	parsing/tree/tree_wdakxi.c parsing/tokenize/main.c parsing/tree/prepare_env.c\
 	parsing/tree/export.c parsing/tree/cd.c parsing/tree/unset.c parsing/tree/pwd.c\
 	parsing/tree/echo.c parsing/tree/exit.c parsing/tree/prepare_heredoc.c parsing/tokenize/expand.c\
-	parsing/tree/joining_args.c parsing/tree/free_all.c parsing/tokenize/syntax_error.c\
-	parsing/tokenize/syntax_error2.c parsing/tokenize/syntax_error3.c parsing/tokenize/expand_split.c
+	parsing/tree/joining_args.c parsing/tree/free_all.c parsing/tokenize/expand_split.c\
+	parsing/tokenize/syntax_pipes.c parsing/tokenize/syntax_main.c parsing/tokenize/syntax_quates.c\
+	parsing/tokenize/syntax_redirections.c
 
 OBJECTS = $(SOURCES:.c=.o)
 
@@ -17,7 +18,7 @@ CC = cc
 LIBFT_DIR = ./libft
 LIBFT = $(LIBFT_DIR)/libft.a
 
-READLINE_PATH = /goinfre/msaadaou/homebrew/opt/readline
+READLINE_PATH = /users/achat/homebrew/opt/readline
 
 READLINE_INCLUDE = -I$(READLINE_PATH)/include
 READLINE_LIB = -L$(READLINE_PATH)/lib -lreadline -lncurses
