--- a/libft/Makefile
+++ b/libft/Makefile
@@ -1,10 +1,5 @@
 NAME = libft.a
 
-GREEN = \033[0;32m
-YELLOW = \033[0;33m
-BLUE = \033[0;34m
-RESET = \033[0m
-
 SOURCES = \
 	ft_isalpha.c ft_isdigit.c ft_isalnum.c ft_isascii.c ft_isprint.c \
 	ft_strlen.c ft_memset.c ft_bzero.c ft_memcpy.c ft_memcpy.c ft_memmove.c \
@@ -22,23 +17,17 @@ CFLAGS = -Wall -Wextra -Werror
 all: $(NAME)
 
 $(NAME): $(OBJECTS)
-	@echo "$(GREEN)Creating libft archive...$(RESET)"
-	@ar -rc $@ $?
-	@echo "$(GREEN)✓ libft.a successfully built!$(RESET)"
+	ar -rc $@ $?
 
 %.o: %.c
-	@printf "$(YELLOW)▶ Compiling... [%s]\r$(RESET)" $
-	@$(CC) -c $(CFLAGS) $< -o $@
-	@printf "$(GREEN)✓ Compiled   $(RESET)\n"
+	$(CC) -c $(CFLAGS) $?
 
 clean:
-	@echo "$(BLUE)Cleaning libft object files...$(RESET)"
-	@rm -f $(OBJECTS)
+	rm -f $(OBJECTS)
 
 fclean: clean
-	@echo "$(BLUE)Removing libft archive...$(RESET)"
-	@rm -f $(NAME)
+	rm -f $(NAME)
 
 re: fclean all
 
-.PHONY: all clean fclean re
+.PHONY: all bonus clean fclean re
